--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,7 +1,110 @@
-@import '@/styles/common.scss';
+@import "@/styles/common.scss";
+
+.aboutMe {
+  display: flex;
+
+  &_content {
+    position: relative;
+    top: -58px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex: 1;
+    margin-left: 80px;
+  }
+
+  &_top {
+    display: flex;
+    margin-right: auto;
+    align-items: center;
+    gap: 1rem;
+    padding: 4px 16px;
+    border-radius: 100px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background: linear-gradient(
+      90deg,
+      #544e5f 0%,
+      rgba(84, 78, 95, 0.46) 59.76%,
+      rgba(84, 78, 95, 0.1) 100%
+    );
+  }
+
+  &_desc {
+    background: linear-gradient(270deg, #8975dc 0%, #f9d1ff 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    font-size: 40px;
+    font-weight: 700;
+  }
+
+  &_contact {
+    display: flex;
+    gap: 1rem;
+  }
+}
+
+.publication {
+  display: flex;
+
+  &_content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex: 1;
+    margin-left: 80px;
+    padding-top: 8px;
+  }
+}
+
+.pubList {
+  display: flex;
+  position: relative;
+
+  a {
+    text-decoration: underline;
+  }
+
+  &_content {
+    position: relative;
+    top: 40px;
+    display: flex;
+    flex: 1;
+    margin-left: 67px;
+    padding: 24px;
+    align-items: center;
+    justify-content: space-between;
+    height: fit-content;
+    gap: 2rem;
+    border-radius: 16px;
+    border: 1.5px solid rgba(255, 255, 255, 0.2);
+    background: linear-gradient(
+      180deg,
+      rgba(213, 215, 255, 0.1) 0%,
+      rgba(213, 215, 255, 0.02) 100%
+    );
+  }
+}
+
+.project {
+  position: relative;
+  top: -3px;
+  display: flex;
+
+  &_content {
+    position: relative;
+    top: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex: 1;
+    margin-left: 80px;
+    padding-top: 8px;
+  }
+}
 
 .homeBanner {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -14,7 +117,8 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: url('/images/home-bg.jpg');
+    // background: url('/images/home-bg.jpg');
+
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: scroll;
