--- a/src/pages/post/index.module.scss
+++ b/src/pages/post/index.module.scss
@@ -1,31 +1,46 @@
-.postList {
-  row-gap: 30px;
-  .postItem {
-    padding: 20px 0;
-    &_title {
-      font-size: 26px;
-      line-height: 1.3;
-      margin-bottom: 10px;
-    }
+.post {
+  display: flex;
 
-    &_subtitle {
-      font-size: 18px;
-      font-weight: 300;
-      margin-bottom: 10px;
-    }
+  &_title {
+    position: relative;
+    top: -10px;
+    margin-left: 80px;
+    font-size: 48px;
+  }
+}
 
-    &_desc {
-      font-size: 16px;
-      font-style: italic;
-      color: #a3a3a3;
-      margin-bottom: 10px;
-    }
+.postItem {
+  display: flex;
 
-    &_meta {
-      font-family: Lora, "Times New Roman", serif;
-      color: gray;
-      font-size: 18px;
-      font-style: italic;
-    }
+  &_content {
+    position: relative;
+    top: 40px;
+    margin-left: 40px;
+  }
+
+  &_title {
+    font-size: 26px;
+    line-height: 1.3;
+    margin-bottom: 10px;
+  }
+
+  &_subtitle {
+    font-size: 18px;
+    font-weight: 300;
+    margin-bottom: 10px;
+  }
+
+  &_desc {
+    font-size: 16px;
+    font-style: italic;
+    color: #a3a3a3;
+    margin-bottom: 10px;
+  }
+
+  &_meta {
+    font-family: Lora, "Times New Roman", serif;
+    color: gray;
+    font-size: 18px;
+    font-style: italic;
   }
 }
