--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -124,6 +124,7 @@ button.rounded {
 
 img {
   transition: all 0.2s;
+  -webkit-user-drag: none;
 }
 
 h1 {
@@ -181,6 +182,7 @@ h3 {
   align-items: flex-end;
   top: 60px;
   right: 10%;
+  z-index: 100;
 
   .avatar {
     width: 15%;
