--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -142,6 +142,11 @@ h3 {
   font-weight: 500;
 }
 
+a {
+  cursor: pointer;
+  pointer-events: auto;
+}
+
 .tag {
   display: inline-flex;
   padding: 4px 8px;
@@ -182,7 +187,7 @@ h3 {
   align-items: flex-end;
   top: 60px;
   right: 10%;
-  z-index: 100;
+  z-index: 1;
 
   .avatar {
     width: 15%;
