--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -8,15 +8,21 @@
     flex-direction: column;
     gap: 1rem;
     flex: 1;
-    margin-left: 80px;
+    margin-left: 2rem;
+  }
+
+  &_contact {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 1rem;
   }
 
   &_top {
     display: inline-flex;
-    margin-right: auto;
     align-items: center;
-    gap: 1rem;
-    padding: 4px 16px;
+    gap: 0.8rem;
+    padding: 4px 1rem;
     border-radius: 100px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     background: linear-gradient(
@@ -32,25 +38,38 @@
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
-    font-size: 40px;
-    font-weight: 700;
-  }
+    font-size: 24px;
+    font-weight: 400;
 
-  &_contact {
-    display: flex;
-    gap: 1rem;
+    @media (min-width: 768px) {
+      font-size: 40px;
+      font-weight: 700;
+    }
   }
 }
 
 .publication {
+  position: relative;
   display: flex;
 
+  &_desc {
+    font-size: 1rem;
+    font-weight: 300;
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+      "Liberation Mono", "Courier New", monospace;
+
+    @media (min-width: 1024px) {
+      font-size: 1.5rem;
+    }
+  }
+
   &_content {
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     flex: 1;
-    margin-left: 80px;
+    margin-left: 3rem;
     padding-top: 8px;
   }
 }
@@ -58,6 +77,7 @@
 .pubList {
   display: flex;
   position: relative;
+  align-items: center;
 
   a {
     text-decoration: underline;
@@ -65,37 +85,25 @@
 
   &_content {
     position: relative;
-    top: 40px;
+    overflow: hidden;
     display: flex;
+    flex-direction: column;
     flex: 1;
-    margin-left: 67px;
-    padding: 24px;
-    align-items: center;
     justify-content: space-between;
+
+    margin-left: 2rem;
+    padding: 1rem;
     height: fit-content;
-    gap: 2rem;
-    border-radius: 16px;
+    border-radius: 1rem;
     border: 1.5px solid rgba(255, 255, 255, 0.2);
     background: linear-gradient(
       180deg,
       rgba(213, 215, 255, 0.1) 0%,
       rgba(213, 215, 255, 0.02) 100%
     );
-  }
-}
 
-.project {
-  position: relative;
-  display: flex;
-
-  &_content {
-    position: relative;
-    top: 100px;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    flex: 1;
-    margin-left: 80px;
-    padding-top: 8px;
+    @media (min-width: 1024px) {
+      flex-direction: row;
+    }
   }
 }
