--- a/src/pages/note/index.module.scss
+++ b/src/pages/note/index.module.scss
@@ -1,12 +1,25 @@
 .publication {
+  position: relative;
   display: flex;
 
+  &_desc {
+    font-size: 1rem;
+    font-weight: 300;
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+      "Liberation Mono", "Courier New", monospace;
+
+    @media (min-width: 1024px) {
+      font-size: 1.5rem;
+    }
+  }
+
   &_content {
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     flex: 1;
-    margin-left: 80px;
+    margin-left: 3rem;
     padding-top: 8px;
   }
 }
@@ -14,24 +27,29 @@
 .pubList {
   display: flex;
   position: relative;
+  align-items: center;
 
   &_content {
     position: relative;
-    top: 60px;
+    overflow: hidden;
     display: flex;
+    flex-direction: column;
     flex: 1;
-    margin-left: 67px;
-    padding: 24px;
-    align-items: center;
     justify-content: space-between;
+
+    margin-left: 2rem;
+    padding: 1rem;
     height: fit-content;
-    gap: 2rem;
-    border-radius: 16px;
+    border-radius: 1rem;
     border: 1.5px solid rgba(255, 255, 255, 0.2);
     background: linear-gradient(
       180deg,
       rgba(213, 215, 255, 0.1) 0%,
       rgba(213, 215, 255, 0.02) 100%
     );
+
+    @media (min-width: 1024px) {
+      flex-direction: row;
+    }
   }
 }
