--- a/src/pages/post/index.module.scss
+++ b/src/pages/post/index.module.scss
@@ -1,37 +1,26 @@
-.post {
-  display: flex;
-
-  &_title {
-    position: relative;
-    top: -10px;
-    margin-left: 80px;
-    font-size: 48px;
-  }
-}
-
 .postItem {
   display: flex;
 
   &_content {
     position: relative;
     top: 40px;
-    margin-left: 40px;
+    margin-left: 2rem;
   }
 
   &_title {
-    font-size: 26px;
+    // font-size: 26px;
     line-height: 1.3;
     margin-bottom: 4px;
   }
 
   &_subtitle {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 300;
     margin-bottom: 4px;
   }
 
   &_desc {
-    font-size: 12px;
+    font-size: 0.8rem;
     font-style: italic;
     color: var(--secondary);
     margin-bottom: 4px;
@@ -40,7 +29,7 @@
   &_meta {
     font-family: Lora, "Times New Roman", serif;
     color: var(--secondary);
-    font-size: 16px;
+    font-size: 1rem;
     font-style: italic;
   }
 }
