--- a/src/styles/github-markdown.css
+++ b/src/styles/github-markdown.css
@@ -127,7 +127,7 @@
   background-color: var(--color-canvas-default);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1.5;
   word-wrap: break-word;
   overflow: auto;
