--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -73,7 +73,7 @@ html.dark[data-theme="light"] {
 }
 
 html {
-  font-size: 13px; // Used as 1rem size.
+  font-size: 12px; // Used as 1rem size.
   scroll-behavior: smooth;
 }
 
@@ -148,7 +148,7 @@ button {
 
 button.rounded {
   padding: 0.5rem;
-  border-radius: 8px;
+  border-radius: 0.5rem;
 }
 
 img {
@@ -186,10 +186,10 @@ a {
 
 .tag {
   display: inline-flex;
-  padding: 4px 8px;
-  border-radius: 32px;
+  padding: 2px 4px;
+  border-radius: 1rem;
   border: 1px solid;
-  font-size: 12px;
+  font-size: 0.8rem;
 }
 
 .tag-active {
@@ -241,20 +241,24 @@ a {
     font-size: 3rem;
     font-weight: bold;
     text-align: right;
-    line-height: 50px;
+    line-height: 3rem;
   }
 }
 
 .container {
   height: 100%;
   position: relative;
-  max-width: 75%;
+  max-width: 100%;
   margin: 0 auto;
   padding: 10px 1rem 60px;
 
   @media (min-width: 1480px) {
-    max-width: 1180px;
+    max-width: 1200px;
     padding: 50px 1rem;
+  }
+
+  @media (min-width: 1024px) {
+    max-width: 80%;
   }
 }
 
@@ -277,17 +281,15 @@ a {
 }
 
 .rightSideBar {
+  position: sticky;
+  top: 80px;
+
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  width: 250px;
-
-  &-fix {
-    position: fixed;
-    top: 80px;
-    animation: slideInDown; /* referring directly to the animation's @keyframe declaration */
-    animation-duration: 0.5s; /* don't forget to set a duration! */
-  }
+  max-width: 250px;
+  animation: slideInDown; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 0.5s; /* don't forget to set a duration! */
 }
 
 .person-side {
@@ -333,54 +335,94 @@ a {
   height: auto;
 }
 
-.toc {
-  width: 250px;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  justify-content: center;
-  background: var(--color-toc-bg);
-  color: #000;
-  padding: 1rem;
-  border-radius: 0.75rem;
-  height: auto;
+.menuBar {
+  &_hidden {
+    position: fixed;
+    top: 50%;
+    right: 0;
+    width: 20px;
+    padding: 1rem 0;
+    border-radius: 0 0.5rem 0.5rem 0;
+    background-color: var(--primary);
 
-  .label {
-    font-weight: 500;
-    font-size: 1.2rem;
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    transform: rotate(180deg);
+
+    @media (min-width: 1024px) {
+      display: none;
+    }
   }
 
-  .js-toc {
-    & > .toc-list {
-      position: relative;
-      overflow: auto;
-      scrollbar-width: none;
-      max-height: 500px;
-    }
-    .toc-list {
-      padding-left: 0.8rem;
-    }
-    .toc-list-item {
-      margin: 8px 0;
+  .toc {
+    display: none;
+    width: 100%;
+    flex-direction: column;
+    gap: 8px;
+    justify-content: center;
+    background: var(--color-toc-bg);
+    color: #000;
+    padding: 1rem;
+    border-radius: 0.75rem;
+    height: auto;
+
+    @media (min-width: 1024px) {
+      display: flex;
     }
 
-    .toc-link::before {
-      background-color: var(--color-toc-bg);
-      content: " ";
-      display: inline-block;
-      height: 100%;
-      left: 0;
-      margin-top: -1px;
-      position: absolute;
-      width: 4px;
+    .label {
+      font-weight: 500;
+      font-size: 1.2rem;
+      display: flex;
     }
 
-    .is-active-link {
-      color: var(--theme-color);
+    .js-toc {
+      & > .toc-list {
+        position: relative;
+        overflow: auto;
+        scrollbar-width: none;
+        max-height: 500px;
+      }
+      .toc-list {
+        padding-left: 0.8rem;
+      }
+      .toc-list-item {
+        margin: 8px 0;
+      }
 
-      &::before {
-        background: var(--theme-color);
+      .toc-link::before {
+        background-color: var(--color-toc-bg);
+        content: " ";
+        display: inline-block;
+        height: 100%;
+        left: 0;
+        margin-top: -1px;
+        position: absolute;
+        width: 4px;
+      }
+
+      .is-active-link {
+        color: var(--theme-color);
+
+        &::before {
+          background: var(--theme-color);
+        }
       }
     }
+  }
+
+  .toc-side {
+    display: flex;
+    position: fixed;
+    top: 50%;
+    right: 0;
+    width: 150px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    z-index: 100;
+
+    // border: 1px solid var(--primary);
+    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1),
+      0px -1px 0px 1px rgba(0, 0, 0, 0.25) inset,
+      0px 2px 0px 0px rgba(255, 255, 255, 0.2) inset;
   }
 }
