--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -359,7 +359,7 @@ a {
     width: 100%;
     flex-direction: column;
     gap: 8px;
-    justify-content: center;
+    // justify-content: center;
     background: var(--color-toc-bg);
     color: #000;
     padding: 1rem;
@@ -414,11 +414,13 @@ a {
   .toc-side {
     display: flex;
     position: fixed;
-    top: 50%;
+    top: calc(50% - 50px);
     right: 0;
     width: 150px;
+    max-height: 400px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     z-index: 100;
+    overflow: hidden;
 
     // border: 1px solid var(--primary);
     box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1),
