--- a/src/pages/note/index.module.scss
+++ b/src/pages/note/index.module.scss
@@ -36,6 +36,7 @@
     flex-direction: column;
     flex: 1;
     justify-content: space-between;
+    align-items: center;
 
     margin-left: 2rem;
     padding: 1rem;
