--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -355,19 +355,28 @@ a {
   }
 
   .toc {
-    display: none;
+    display: flex;
     width: 100%;
     flex-direction: column;
     gap: 8px;
-    // justify-content: center;
     background: var(--color-toc-bg);
     color: #000;
     padding: 1rem;
     border-radius: 0.75rem;
-    height: auto;
 
-    @media (min-width: 1024px) {
+    @media (max-width: 1024px) {
       display: flex;
+      position: fixed;
+      top: 50%;
+      right: 0;
+      transform: translateY(-50%);
+      // width: 150px;
+      z-index: 1;
+      box-shadow: -3px 3px 2px rgba(0, 0, 0, 0.3);
+      transition: all 300ms ease-in-out;
+      padding: 0;
+      max-width: 0px;
+      overflow: hidden;
     }
 
     .label {
@@ -379,15 +388,37 @@ a {
     .js-toc {
       & > .toc-list {
         position: relative;
-        overflow: auto;
-        scrollbar-width: none;
-        max-height: 500px;
+        overflow: hidden;
       }
       .toc-list {
         padding-left: 0.8rem;
-      }
-      .toc-list-item {
-        margin: 8px 0;
+
+        .toc-list-item {
+          margin: 0.5rem 0;
+          &:first-child {
+            margin-top: 0;
+          }
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+
+        .is-collapsible {
+          max-height: 1000px;
+          overflow: hidden;
+          transition: all 300ms ease-in-out;
+        }
+        .is-collapsed {
+          max-height: 0;
+        }
+
+        .is-active-link {
+          color: var(--theme-color);
+
+          &::before {
+            background: var(--theme-color);
+          }
+        }
       }
 
       .toc-link::before {
@@ -400,31 +431,11 @@ a {
         position: absolute;
         width: 4px;
       }
-
-      .is-active-link {
-        color: var(--theme-color);
-
-        &::before {
-          background: var(--theme-color);
-        }
-      }
     }
   }
 
   .toc-side {
-    display: flex;
-    position: fixed;
-    top: calc(50% - 50px);
-    right: 0;
-    width: 150px;
-    max-height: 400px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    z-index: 100;
-    overflow: hidden;
-
-    // border: 1px solid var(--primary);
-    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1),
-      0px -1px 0px 1px rgba(0, 0, 0, 0.25) inset,
-      0px 2px 0px 0px rgba(255, 255, 255, 0.2) inset;
+    max-width: 150px;
+    padding: 1rem;
   }
 }
