--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -366,6 +366,9 @@ a {
     color: #000;
     padding: 1rem;
     border-radius: 0.75rem;
+    max-height: 60%;
+    overflow: auto;
+    scrollbar-width: 0;
 
     @media (max-width: 1024px) {
       display: flex;
@@ -373,13 +376,11 @@ a {
       top: 50%;
       right: 0;
       transform: translateY(-50%);
-      // width: 150px;
       z-index: 1;
       box-shadow: -3px 3px 2px rgba(0, 0, 0, 0.3);
       transition: all 300ms ease-in-out;
       padding: 0;
       max-width: 0px;
-      overflow: hidden;
     }
 
     .label {
@@ -399,6 +400,11 @@ a {
 
         .toc-list-item {
           margin: 0.5rem 0;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 2;
+          overflow: hidden;
+
           &:first-child {
             margin-top: 0;
           }
