--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -283,15 +283,13 @@ a {
 }
 
 .rightSideBar {
-  position: sticky;
-  top: 80px;
-
   display: flex;
   flex-direction: column;
   gap: 2rem;
   max-width: 250px;
   animation: slideInDown; /* referring directly to the animation's @keyframe declaration */
   animation-duration: 0.5s; /* don't forget to set a duration! */
+  height: 100%;
 }
 
 .person-side {
@@ -338,6 +336,9 @@ a {
 }
 
 .menuBar {
+  position: sticky;
+  top: 60px;
+
   &_hidden {
     position: fixed;
     top: 50%;
@@ -366,9 +367,7 @@ a {
     color: #000;
     padding: 1rem;
     border-radius: 0.75rem;
-    max-height: 60%;
-    overflow: auto;
-    scrollbar-width: 0;
+    font-size: 0.9rem;
 
     @media (max-width: 1024px) {
       display: flex;
@@ -446,6 +445,9 @@ a {
 
   .toc-side {
     max-width: 150px;
+    max-height: 60%;
+    overflow: auto;
+    scrollbar-width: none;
     padding: 1rem;
     z-index: 60;
     border-radius: 0.7rem 0 0 0.7rem;
